--- a/samples/MultiNodeSample/MultiNodeSample/Base.lproj/Main.storyboard
+++ b/samples/MultiNodeSample/MultiNodeSample/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aj2-Yb-OEw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aj2-Yb-OEw">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Main View Controller-->
@@ -22,6 +23,55 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c0r-Wq-fDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1747" y="603"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="EMW-3m-i8i">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Gu3-Eg-MgB" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ei8-yd-zRo"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ksj-Q5-6oq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7o6-ZC-uaU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Send as text" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EgP-LQ-okB">
+                                <rect key="frame" x="16" y="72" width="475" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iff-yE-9iA">
+                                <rect key="frame" x="499" y="72" width="85" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="BHz-Bi-CLP"/>
+                                    <constraint firstAttribute="width" constant="85" id="tek-E6-J9R"/>
+                                </constraints>
+                                <state key="normal" title="Send">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendData:" destination="Gu3-Eg-MgB" eventType="touchUpInside" id="qTm-JU-Fc2"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Iff-yE-9iA" firstAttribute="top" secondItem="Ei8-yd-zRo" secondAttribute="bottom" constant="8" id="2Vk-GM-NKf"/>
+                            <constraint firstItem="EgP-LQ-okB" firstAttribute="leading" secondItem="7o6-ZC-uaU" secondAttribute="leadingMargin" id="JBe-Kv-u5X"/>
+                            <constraint firstItem="Iff-yE-9iA" firstAttribute="leading" secondItem="EgP-LQ-okB" secondAttribute="trailing" constant="8" id="b7q-iV-RaJ"/>
+                            <constraint firstItem="Iff-yE-9iA" firstAttribute="trailing" secondItem="7o6-ZC-uaU" secondAttribute="trailingMargin" id="cjf-hd-Gl1"/>
+                            <constraint firstItem="EgP-LQ-okB" firstAttribute="top" secondItem="Ei8-yd-zRo" secondAttribute="bottom" constant="8" id="foY-eM-NYz"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="sendDataTextField" destination="EgP-LQ-okB" id="8Ri-nb-b66"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wrR-Hh-eqD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1747" y="1319"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LVG-Rq-juy">
