--- a/samples/HardwareSample/HardwareSample/en.lproj/MainStoryboard.storyboard
+++ b/samples/HardwareSample/HardwareSample/en.lproj/MainStoryboard.storyboard
@@ -100,6 +100,9 @@
                                 <rect key="frame" x="16" y="166" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="2" id="LZr-Mg-Hh3"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
